# data-explorer-launchable

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  README_LAUNCHABLE.md  configs  data  ensemble_results.py  entrypoint.sh  example.py  fee_matching_guide.md  new_solutions.md  postprocess.py  pyproject.toml  requirements.txt  run_all_tasks.sh  setup.sh  solutions.md
dabstep/: DABstep_eval.py  config.yaml  download_data.py
dabstep_agent/: README.md  a0.py  agent.py  api.py  client.py  dabstep_config.yml  data_search_agent.py  extract_structure_example.py  extract_structures.py  fee_matching_guide.md  generate_file_structures.py  helper.py  learn.py  learning_config.yml  new_solutions.md  prompt.md  qa_agent.py  retriever.py  run.py  score.py  simple_qa_agent.py  solve.py  solver.py  test_agent.py  tools.py  utils.py
dabstep_agent/examples/: answer.py  t.py  v.py  x.py
dabstep_agent/inference/: README.md  client.py  dabstep_config.yml  helper.py  new_solutions.md  postprocess.py  server.py  solve.py
dabstep_agent/learn/: README.md  distill.py  learn.py  learning_config.yml
dabstep_agent/learn/distill_agent_sdk/: distill_prompt.md  run_distill.py
dabstep_agent/learn/distill_nat/: distill.py  distill_config.yml
dabstep_agent/traces/inference/: solve_log.jsonl
generic_qa_agent/: README.md  config.yml  solve.py
notebooks/: START_HERE.ipynb  demo_dabstep.ipynb  demo_eda.ipynb  demo_qa.ipynb  example.ipynb
python_executor_example/: config.yml  dabstep_config.yml  new_solutions.md  solve.py
src/data_explorer_agent/: data_explorer_agent.py  notebook_util.py  python_executor.py  register.py  tools.py  utils.py
src/data_explorer_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+28 files in other folders)
