[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "data_explorer_agent"
version = "0.1.0"
dependencies = [
  "jupyter>=1.1.1",
  "nbconvert>=7.16.6",
  "nbformat>=5.10.4",
  "nvidia-nat[langchain]>=1.5.0a20260216",
]
requires-python = ">=3.11,<3.14"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]



[project.entry-points.'nat.components']
data_explorer_agent = "data_explorer_agent.register"

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
